--- a/react-hw-1/src/components/Button/Button.scss
+++ b/react-hw-1/src/components/Button/Button.scss
@@ -1,19 +1,12 @@
-.button {
+button {
     padding: 15px 25px;
-    border: none;
-    border-radius: 15px;
     color: #fff;
     font-size: 17px;
+    font-weight: 700;
+    color: #fff;
     cursor: pointer;
-    margin: 18px;
-  }
-  
-  .button:nth-child(1) {
-    background-color: #007bff;
-  }
-  
-  .button:nth-child(2) {
-    background-color: #e8fc04;
-    color: black;
-  }
-  
+    border: none;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+    margin: 15px;
+}
