--- a/react-hw-1/src/components/Modal/Modal.scss
+++ b/react-hw-1/src/components/Modal/Modal.scss
@@ -1,38 +1,75 @@
-.popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #312e2e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   .modal {
-    background-color: #fff;
-    padding: 40px 100px;
+    background: #fff;
+    border: 1px solid #000000;
     border-radius: 15px;
-  }
-  .close {
+    width: 516px;
+    margin: 0 auto;
     position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  .modal h2 {
-    margin-top: 0;
-  }
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+.modal-content {
+      color: #ffffff;
   
-  .actions {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
+.modal-header {
+        padding: 0 29px;
+        background: rgb(26, 26, 178);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
   
-    button {
-      margin-left: 10px;
+.modal-title {
+          font-size: 25px;
+        }
+  
+.close-btn {
+          display: flex;
+          cursor: pointer;
+        }
+      }
+  
+.modal-body {
+  color: black;
+        padding: 0 29px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 35px;
+        margin-top: 34px;
+        p {
+          font-size: 20px;
+        }
+      }
+  
+.modal-footer {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 24px;
+        button {
+          background: #b3382c;
+          border-radius: 4px;
+          font-size: 15px;
+          width: 101px;
+          height: 41px;
+          color: #ffffff;
+        }
+.btn-ok {
+          margin-right: 20px;
+        }
+      }
     }
   }
-  
+}
+
