--- a/react-hw-3/src/App.css
+++ b/react-hw-3/src/App.css
@@ -6,4 +6,8 @@
 body {
   background-color: aliceblue;
 }
-
+.routes{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
