--- a/react-hw-3/src/components/Product/Product.scss
+++ b/react-hw-3/src/components/Product/Product.scss
@@ -46,6 +46,15 @@
       cursor: pointer;
       background-color: green;
     }
+    .delete{
+      color: #fff;
+      padding: 15px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: rgb(218, 5, 5);
+    }
   }
 }
 .container {
